[package]
name = "oneshot_password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.11.0"
strum = { version = "0.25", features = ["derive"] }
derive_more = "0.99.17"
clap = { version = "4.4.7", features = ["derive"] }
rayon = "1.8.0"